user-common/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: game
  name: game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game
  strategy: {}
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
      - image: quay.io/rhdevelopers/bgd:1.0.0
        name: game
        resources: {}
---
