user-common/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: game
  name: game
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: game
---
