user-common/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: game
  name: game
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: game
    weight: 100
